[package]
name = "limine-rust"
version = "0.1.0"
description = "A Rust implementation of the Limine Boot Protocol"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ce1r/limine-rust"
categories = ["no-std"]

[workspace]
members = ["limine-test"]

[features]
test = ["dep:bindgen"]

[build-dependencies]
bindgen = { version = "0.72.1", optional = true }

[dev-dependencies]
limine-rust = { path = ".", features = ["test"] }
limine-test = { path = "limine-test" }
